--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>About Me</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -14,7 +15,7 @@
         <div class="sidebar">
             <img src="./assets/images/avatar.png" alt="profile">
             <h2>Ly Chanthorn</h2>
-            <h4>Web Developer</h4>
+            <h4>Wep Developer</h4>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About me</a></li>
@@ -23,18 +24,112 @@
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
+            <div class="social-media">
+                <a href="#"><i class='bx bxl-twitter bx-sm'></i></a>
+                <a href="#"><i class='bx bxl-facebook bx-sm' ></i></a>
+                <a href="#"><i class='bx bxl-google-plus bx-sm' ></i></a>
+            </div>
         </div>
         <div class="home">
-            <div class="home-items">
-                <p>Ly Chanthorn</p>
-                <h3>Frontend-developer</h3>
-                <ul>
-                    <li><span>Age</span> 21</li>
-                    <li><span>Address</span> 134st, Toul Kork, Phnom Penh</li>
-                    <li><span>Email</span> zlatan@gmail.com</li>
-                    <li><span>Phone</span> +855 96 784 7342</li>
-                    <li><span>Freelance</span> Available</li>
-                </ul>
+            <div>
+                <div class="shadow"></div>
+                <div class="home-items">
+                    <i>About me</i>
+                    <span>Artist, Thinker, Creative Doer</span>
+                </div>
+            </div>
+            <div class="intoduct">
+                <div class="item1">
+                    <h2>I am Web Developer/Designer @ <br>Company.com</h2>
+                    <p>Proin laoreet, odio et dignissim pharetra, ante risus dapibus lorem, eget porta odio neque in enim. Aliquam quis odio neque. Curabitur mollis justo ut quam elementum, in rutrum metus bibendum. Fusce vel orci et ligula ornare molestie.
+                        Mauris accumsan erat eu leo varius varius.</p>
+                    <p class="paragraph">Proin laoreet, odio et dignissim pharetra, ante risus dapibus lorem, eget porta odio neque in enim. Aliquam quis odio neque. Curabitur mollis justo ut quam elementum, in rutrum metus bibendum. Fusce vel orci et ligula ornare molestie.
+                        Mauris accumsan erat eu leo varius varius. Quisque mollis pharetra venenatis. Duis id turpis aliquam sem posuere luctus eget porta justo. Aliquam egestas justo mauris, sit amet aliquet mi posuere eu. Nunc vehicula placerat sem,
+                        quis bibendum sapien venenatis id.</p>
+                </div>
+                <div class="item2">
+                    <h2>Testimonials</h2>
+                    <div class="block1">
+                        <span>“Nor is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but occasionally circumstances occur in which toil and pain can procure him some great pleasure.”</span>
+                    </div>
+                    <div class="block2">
+                        <img src="./assets/images/zlatan.png" alt="profile">
+                        <span>Zlatan Imbra</span>
+                        <p>Sun Foods <span>
+                            <i class='bx bx-chevron-left left'></i>
+                            <i class='bx bx-chevron-right right'></i>
+                        </span></p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="service">
+                <div class="service-item1">
+                    <h2>Services</h2>
+                    <img src="./assets/images/web_design.png" alt="web">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+                <div class="service-item2">
+                    <img src="./assets/images/copywrite.png" alt="web">
+                    <h4>Copywritter</h4>
+                    <p>Lorem ipsum dolor sit amet, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+                <div class="service-item3">
+                    <img src="./assets/images/ecommerce.png" alt="web">
+                    <h4>E-commerce</h4>
+                    <p>Lorem ipsum dolor sit amet, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+                <div class="service-item4">
+                    <img src="./assets/images/management.png" alt="web">
+                    <h4>Management</h4>
+                    <p>Lorem ipsum dolor sit amet, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+            </div>
+            <div class="client">
+                <h2>Client</h2>
+
+                <div>
+                    <img src="./assets/images/client1.png" alt="">
+                </div>
+                <div>
+                    <img src="./assets/images/client2.png" alt="">
+                </div>
+                <div>
+                    <img src="./assets/images/client3.png" alt="">
+                </div>
+                <div>
+                    <img src="./assets/images/client4.png" alt="">
+                </div>
+                <div>
+                    <img src="./assets/images/client5.png" alt="">
+                </div>
+                <div>
+                    <img src="./assets/images/client6.png" alt="">
+                </div>
+            </div>
+            <div class="award">
+                <h2>Fun Facts</h2>
+                <div class="item1">
+                    <img src="./assets/images/happyclient.png" alt="happy">
+                    <h4>Happy Clients</h4>
+                    <div>1,024</div>
+                </div>
+                <div>
+                    <img src="./assets/images/clockclient.png" alt="clock">
+                    <h4>Working Hours</h4>
+                    <div>6,265</div>
+                </div>
+                <div class="item1">
+                    <img src="./assets/images/awardclient.png" alt="award">
+                    <h4>Awards Won</h4>
+                    <div>21</div>
+                </div>
+                <div>
+                    <img src="./assets/images/coffeeclient.png" alt="happy">
+                    <h4>Coffee Consume</h4>
+                    <div>20,024</div>
+                </div>
             </div>
         </div>
     </div>
