--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             </ul>
         </div>
         <div class="home">
+            <div class="shadow"></div>
             <div class="home-items">
                 <p>Ly Chanthorn</p>
                 <h3>Frontend-developer</h3>
