--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>About Me</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -14,7 +15,7 @@
         <div class="sidebar">
             <img src="./assets/images/avatar.png" alt="profile">
             <h2>Ly Chanthorn</h2>
-            <h4>Web Developer</h4>
+            <h4>Wep Developer</h4>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About me</a></li>
@@ -23,19 +24,39 @@
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
+            <div class="social-media">
+                <a href="#"><i class='bx bxl-twitter '></i></a>
+                <a href="https://web.facebook.com/?_rdc=1&_rdr" target="_blank"><i class='bx bxl-facebook ' ></i></a>
+                <a href="#"><i class='bx bxl-google-plus ' ></i></a>
+            </div>
         </div>
         <div class="home">
-            <div class="shadow"></div>
-            <div class="home-items">
-                <p>Ly Chanthorn</p>
-                <h3>Frontend-developer</h3>
-                <ul>
-                    <li><span>Age</span> 21</li>
-                    <li><span>Address</span> 134st, Toul Kork, Phnom Penh</li>
-                    <li><span>Email</span> zlatan@gmail.com</li>
-                    <li><span>Phone</span> +855 96 784 7342</li>
-                    <li><span>Freelance</span> Available</li>
-                </ul>
+            <div>
+                <div class="shadow"></div>
+                <div class="home-items">
+                    <i>Portfolio</i>
+                    <span>My Best Words</span>
+                </div>
+            </div>
+            <div class="menu">
+                <div class="back_ground"><a href="#">All</a></div>
+                <div><a href="#">Media</a></div>
+                <div><a href="#">Illustration</a></div>
+                <div><a href="#">Blogs</a></div>
+            </div>
+            <div class="list_item">
+                <div><img src="./assets/images/1.jpg" alt="1"></div>
+                <div><img src="./assets/images/2.jpg" alt="1"></div>
+                <div><img src="./assets/images/3.jpg" alt="1"></div>
+                <div><img src="./assets/images/4.jpg" alt="1"></div>
+                <div><img src="./assets/images/5.jpg" alt="1"></div>
+                <div><img src="./assets/images/6.jpg" alt="1"></div>
+                <div><img src="./assets/images/7.jpg" alt="1"></div>
+                <div><img src="./assets/images/8.jpg" alt="1"></div>
+                <div><img src="./assets/images/9.jpg" alt="1"></div>
+                <div><img src="./assets/images/10.jpg" alt="1"></div>
+                <div><img src="./assets/images/11.jpg" alt="1"></div>
+                <div><img src="./assets/images/12.jpg" alt="1"></div>
             </div>
         </div>
     </div>
