--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>About Me</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" href="./assets/images/avatar.png" type="image/icon type">
 </head>
 
 <body>
